# ROS

./: README.md  kobuki_testing.cpp  laberinto.pgm  laberinto.yaml  readme_laberinto.txt  widowx_arm_testing.cpp
crumb/: README.md
crumb/crumb/: package.xml
crumb/crumb_control/: CMakeLists.txt  package.xml
crumb/crumb_control/config/: crumb_control.yaml
crumb/crumb_control/launch/: crumb_control.launch
crumb/crumb_description/: CMakeLists.txt  package.xml
crumb/crumb_description/launch/: crumb_rviz.launch
crumb/crumb_description/urdf/: common_materials.xacro  crumb.gazebo  crumb.xacro  crumb_macro.xacro  crumb_noise.xacro  kobuki_crumb_n.urdf.xacro  kobuki_gazebo_crumb.urdf.xacro  kobuki_gazebo_crumb_n.urdf.xacro  turtlebot_gazebo_crumb.urdf.xacro  turtlebot_gazebo_crumb_n.urdf.xacro  turtlebot_library_crumb.urdf.xacro  turtlebot_library_crumb_n.urdf.xacro
crumb/crumb_description/urdf/sensors/: kinect_crumb.urdf.xacro  kinect_crumb_n.urdf.xacro
crumb/crumb_gazebo/: CMakeLists.txt  package.xml
crumb/crumb_gazebo/launch/: control_spawner.launch  crumb_laberinto.launch  crumb_pick_place.launch  crumb_pick_place_noise.launch  crumb_prueba1.launch  crumb_world.launch  crumb_world_noise.launch  lab_prueba.launch
crumb/crumb_gazebo/src/: core.cpp  imu_data_raw.cpp  led.cpp  noise.cpp  odom_crumb.cpp  reset_odom.cpp  wheel_drop.cpp
crumb/crumb_gazebo/worlds/: crumb.world  escenario1.world  escenario2.world  escenario3.world  lab_prueba.world  laberinto.world  laberinto1.world  objects.world  pick_place.world  prueba1.world  sin_crumb.world  tres_cajas.world
crumb/crumb_home/: CMakeLists.txt  package.xml
crumb/crumb_home/src/: crumb_abrir_pinza.cpp  crumb_app3_original.cpp  crumb_cajas_mcd.cpp  crumb_cajas_mci.cpp  crumb_cajas_selector.cpp  crumb_cerrar_pinza.cpp  crumb_gripper.cpp  crumb_home.cpp  crumb_movepickplace.cpp  crumb_sentido_art.cpp  crumb_teleop.cpp  track_line.cpp  track_spline.cpp  tutorial1_crumb.cpp  tutorial2_crumb.cpp  tutorial3_crumb.cpp
crumb/crumb_listener/: CMakeLists.txt  package.xml
crumb/crumb_listener/src/: crumb_listener_gazebo.cpp  pose_gazebo.cpp  real_time_gazebo.cpp  sim_time_gazebo.cpp
hello_turtlebot/: go_to_specific_point_on_map.py~
