<?xml version="1.0"?>
<package>
  <name>crumb</name>
  <version>0.0.0</version>
  <description>The crumb package</description>

 
  <maintainer email="marinaaguilar@alu.uma.es">Marina Aguilar</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>crumb_description</run_depend>
  <run_depend>crumb_home</run_depend>
  <run_depend>crumb_gazebo</run_depend>
  <run_depend>crumb_control</run_depend>
  <run_depend>crumb_listener</run_depend>

  <export><metapackage/></export>

</package>
