<?xml version="1.0"?>
<package>
  <name>crumb_description</name>
  <version>0.0.0</version>
  <description>The crumb_description package</description>

  <maintainer email="marinaaguilar@alu.uma.es">Marina Aguilar</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
