<?xml version="1.0"?>
<package>
  <name>crumb_home</name>
  <version>0.0.0</version>
  <description>The crumb_home package</description>

  <maintainer email="marinaaguilar@alu.uma.es">Marina Aguilar</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arbotix_python</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>arbotix_python</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>